# drones-ISW

./: .env  .gitignore  .gitignore.orig  CMakeLists.txt  Dockerfile  Dockerfile.server  Dockerfile.test  Doxyfile  Makefile  README.md  area GUI.py  devcontainer.json  docker-compose.yml  dump.rdb  main.cpp  mapGUI.py  plots.py
con2db/: Makefile  pgsql.h
con2db/db-scripts/: create.sh
con2redis/src/: readreply.cpp  redisfun.cpp
data/db-scripts/: inserts.sql  tables.sql
data/postgresData/global/: 1260  pg_control
data/postgresData/pg_stat/: pgstat.stat
docs/html/: _area_8hpp_source.html  _basic_strategy_8h_source.html  _control_center_8hpp_source.html  _drone_8h_source.html  _path_8h_source.html  _scanning_strategy_8h_source.html  _server_8hpp_source.html  _session_8hpp_source.html  _stream_redis_8h_source.html  _thread_pool_8cpp_source.html  _thread_pool_8h_source.html  annotated.html  class_area-members.html  class_area.html  class_basic_strategy-members.html  class_basic_strategy.html  class_con2_d_b-members.html  class_con2_d_b.html  class_control_center-members.html  class_control_center.html  class_drone-members.html  class_drone.html  class_path-members.html  class_path.html  class_scanning_strategy-members.html  class_scanning_strategy.html  class_server-members.html  class_server.html  class_stream_redis-members.html  class_stream_redis.html  class_thread_pool-members.html  class_thread_pool.html  classes.html  classhttp__session-members.html  classhttp__session.html  config_8h_source.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_0bcbce3f255e4218c8a017931759cfab.html  dir_13a315b5385245f853e7302e7b8aa2b0.html  dir_2624b1943e95bff0fbc833e03d4cc8d3.html  (+60 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
docs/latex/: _area_8hpp_source.tex  _basic_strategy_8h_source.tex  _control_center_8hpp_source.tex  _drone_8h_source.tex  _path_8h_source.tex  _scanning_strategy_8h_source.tex  _server_8hpp_source.tex  _session_8hpp_source.tex  _stream_redis_8h_source.tex  _thread_pool_8cpp_source.tex  _thread_pool_8h_source.tex  annotated.tex  class_area.tex  class_basic_strategy.eps  class_basic_strategy.tex  class_con2_d_b.tex  class_control_center.tex  class_drone.tex  class_path.tex  class_scanning_strategy.eps  class_scanning_strategy.tex  class_server.tex  class_stream_redis.tex  class_thread_pool.tex  classhttp__session.eps  classhttp__session.tex  config_8h_source.tex  files.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  pgsql_8h_source.tex  redis_8h_source.tex  refman.tex  struct_coordinate.tex  struct_drone_data.tex  struct_redis_1_1_group_info.tex  struct_redis_1_1_stream_info.tex  structdrone__scan__init.tex  structpath__drone__scann__init.tex
includes/: Algorithm.hpp  ControlCenter.hpp  Direction.hpp  Drone.hpp  Field.hpp  MapToScan.hpp  Point.hpp  RedisClient.hpp  con2redis.hpp  redis_fnc.hpp
src/: config.cpp  config.h
src/area/: Area.cpp  Area.hpp
src/con2db/: pgsql.cpp  pgsql.h
src/control_center/: ControlCenter.cpp  ControlCenter.hpp  ThreadPool.cpp  ThreadPool.h  main.cpp
src/drone/: Drone.cpp  Drone.h  main.cpp
src/redis/: StreamRedis.cpp  StreamRedis.h  redis.cpp  redis.h
src/scanning_strategy/: BasicStrategy.cpp  BasicStrategy.h  Path.cpp  Path.h  ScanningStrategy.h  SimpleStrategy.cpp  SimpleStrategy.h  config.h
src/server/: CMakeLists.txt  Dockerfile  Server.cpp  Server.hpp  Session.cpp  Session.hpp  Session2.cpp  client  client.cpp  main.cpp  server  server.py
srcs/: ControlCenter.cpp  Drone.cpp  Field.cpp  Makefile  RedisClient.cpp  drone8.cpp  redis_fnc.cpp
srcs/Algorithms/: AlgoritmoSpecifico.cpp  MyAlgorithm.cpp  VivianosAlg.cpp
